# opencode-os

./: .gitignore  Cargo.toml  agents.md  biome.json  opencode-api.json  package.json  pnpm-lock.yaml  product-prd.md  studio.db
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.opencode-studio/: config.toml  studio.db
.opencode-studio/kanban/plans/: 02c83e72-f9d4-413a-a341-6995ff757a82.md  116942a0-0ca8-4215-a242-3573d7493df8.md  15e199e2-08ad-4e67-af50-131803ca5edb.md  1e29f7ae-7ddb-45db-b3f7-474e24f8744f.md  3173e278-12a5-4a29-b667-1b25d9883f7a.md  42944d6d-7561-4030-afed-f425f9e4f279.md  4ad1886f-b145-4108-9744-1bd8b7f16460.md  4d3b9b45-a365-4f23-b0ea-b1f4e59ec9c7.md  4db84480-2f92-48ee-9592-2c73beef95d3.md  5442e9b8-791b-4961-9fef-1e18bc3c5ad0.md  59a8e4fb-799b-4449-b025-e30a071820a1.md  67d5bc95-691b-4083-b3a1-81fb89a63ec0.md  775a800e-bf7a-41b7-a30f-c99cdc2e7d8a.md  7ae0d472-d61f-41db-9451-6da9e344654b.md  92361bd1-a25e-414a-a417-5a7f733c96cc.md  9976ffdf-9ff8-44f7-85c4-b71602352831.md  9f333a20-9cff-4b76-82a3-b33115066584.md  (+6 more)
crates/: AGENTS.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  opencode_manager.rs
crates/core/: Cargo.toml
crates/core/bindings/: ConvertToTaskResponse.ts  CreateTaskRequest.ts  GenerateRoadmapRequest.ts  RoadmapFeature.ts  RoadmapFeatureStatus.ts  RoadmapGenerationPhase.ts  RoadmapGenerationStatus.ts  RoadmapMilestone.ts  RoadmapStats.ts  RoadmapStatus.ts  Session.ts  SessionPhase.ts  SessionStatus.ts  TargetAudience.ts  UpdateFeatureRequest.ts
crates/core/src/: error.rs  lib.rs
crates/core/src/domain/: mod.rs  roadmap.rs  session.rs  task.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial.sql  002_session_activities.sql  003_implementation_phases.sql  004_diff_viewed_files.sql  005_review_comments.sql
crates/db/src/: error.rs  lib.rs  pool.rs
crates/db/src/models/: mod.rs  session.rs  session_activity.rs  task.rs
crates/db/src/repositories/: diff_viewed_repository.rs  mod.rs  review_comment_repository.rs  session_activity_repository.rs  session_repository.rs  task_repository.rs
crates/events/: Cargo.toml
crates/events/bindings/: AgentMessageData.ts  Event.ts  EventEnvelope.ts
crates/events/src/: bus.rs  lib.rs  types.rs
crates/github/: Cargo.toml
crates/github/bindings/: CiState.ts  CiStatus.ts  FileStatus.ts  Label.ts  PrReviewComment.ts  PullRequestDetail.ts  ReviewState.ts
crates/github/src/: client.rs  error.rs  gh_cli.rs  lib.rs  types.rs
crates/mcp-findings/: Cargo.toml
crates/mcp-findings/src/: lib.rs  main.rs
crates/mcp-wiki/: Cargo.toml
crates/mcp-wiki/src/: lib.rs  main.rs
crates/opencode/: Cargo.toml
crates/opencode-client/: Cargo.toml
crates/opencode/src/: client.rs  error.rs  events.rs  lib.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: activity_store.rs  error.rs  executor.rs  files.rs  lib.rs  mcp_config.rs  opencode_events.rs  plan_parser.rs  prompts.rs  session_runner.rs  state_machine.rs
crates/orchestrator/src/core/: events.rs  execution.rs  mod.rs  phase.rs
crates/orchestrator/src/phases/: fix.rs  implementation.rs  mod.rs  planning.rs  review.rs
crates/orchestrator/src/resources/: mcp_guard.rs  mod.rs  session_guard.rs
crates/orchestrator/src/services/: executor_context.rs  fix_phase.rs  implementation_phase.rs  mcp_manager.rs  message_parser.rs  mod.rs  opencode_client.rs  planning_phase.rs  review_phase.rs  roadmap_prompts.rs  roadmap_service.rs  roadmap_store.rs
crates/server/: Cargo.toml
crates/server/bindings/: AskRequest.ts  AskResponse.ts  AskSource.ts  BranchStatus.ts  CheckRun.ts  CommentsListResponse.ts  CompleteAction.ts  CompletePreviewResponse.ts  CompleteTaskRequest.ts  CompleteTaskResponse.ts  ConvertToTaskResponse.ts  CreateCommentRequest.ts  CreatePrCommentRequest.ts  DiffSide.ts  DiffSummary.ts  ExecuteResponse.ts  FindingSeverity.ts  FindingStatus.ts  FindingsResponse.ts  FixFindingsRequest.ts  FixFromCommentsRequest.ts  FixFromCommentsResponse.ts  GenerateWikiRequest.ts  GenerateWikiResponse.ts  GitHubSettingsResponse.ts  GitHubUser.ts  IndexRequest.ts  IndexResponse.ts  MergeOptions.ts  MergeRequest.ts  MergeResultInfo.ts  ModelSelection.ts  OpenCodeModel.ts  OpenCodeProvider.ts  PhaseInfo.ts  PhaseModels.ts  PhaseModelsResponse.ts  PhaseStatus.ts  PhaseSummary.ts  PhasesResponse.ts  (+54 more)
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  opencode_manager.rs  project_manager.rs  state.rs
crates/server/src/routes/: comments.rs  complete.rs  filesystem.rs  health.rs  mod.rs  opencode.rs  project.rs  projects.rs  pull_requests.rs  roadmap.rs  sessions.rs  settings.rs  sse.rs  tasks.rs  wiki.rs  workspaces.rs  ws.rs
crates/server/tests/: api_tests.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: error.rs  git.rs  jj.rs  lib.rs  traits.rs  workspace.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: handler.rs  lib.rs  messages.rs
crates/wiki/: Cargo.toml
crates/wiki/src/: error.rs  git.rs  lib.rs  sync.rs
crates/wiki/src/chunker/: mod.rs
crates/wiki/src/domain/: chunk.rs  index_status.rs  mod.rs  search_result.rs  wiki_page.rs  wiki_section.rs
crates/wiki/src/generator/: analyzer.rs  mermaid.rs  mod.rs  prompts.rs
crates/wiki/src/indexer/: mod.rs  reader.rs
crates/wiki/src/openrouter/: client.rs  mod.rs  types.rs
crates/wiki/src/rag/: mod.rs
crates/wiki/src/vector_store/: mod.rs
docs/architecture/: backend-implementation-plan.md  multi-project-design.md
frontend/: AGENTS.md  components.json  index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: globals.css
frontend/src/: App.tsx  env.js  main.tsx
roadmap/: roadmap.archive.2025-12-31T00-24-08-853Z.md  roadmap.archive.2025-12-31T00-50-43-498Z.md  roadmap.archive.2025-12-31T15-42-30-211Z.md  roadmap.archive.2025-12-31T18-37-25-605Z.md  roadmap.archive.2025-12-31T20-21-26-3NZ.md  roadmap.archive.2025-12-31T20-55-53-387Z.md  roadmap.md
scripts/: postinstall.mjs  prepare-dist.mjs  test_e2e_streaming.sh  test_quick_stream.sh
(+423 files in other folders)
