[workspace]
resolver = "2"
members = [
    "crates/server",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
