[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/db",
    "crates/server",
    "crates/opencode",
    "crates/orchestrator",
    "crates/vcs",
    "crates/events",
    "crates/websocket",
    "crates/github",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
opencode_core = { path = "crates/core" }
db = { path = "crates/db" }
opencode = { path = "crates/opencode" }
orchestrator = { path = "crates/orchestrator" }
vcs = { path = "crates/vcs" }
events = { path = "crates/events" }
websocket = { path = "crates/websocket" }
github = { path = "crates/github" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.0"
futures = "0.3"
eventsource-stream = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Type generation for TypeScript
ts-rs = { version = "10.1", features = ["uuid-impl", "chrono-impl", "serde-compat"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["uuid", "chrono", "axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.release]
strip = true
