[package]
name = "opencode-studio"
version = "0.1.0"
edition = "2021"
description = "CLI for OpenCode Studio - AI-powered development platform"

[[bin]]
name = "opencode-studio"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "5"
axum = { workspace = true }
colored = "2"
console = "0.15"
reqwest = { workspace = true }
zip = "2"
futures-util = "0.3"
indicatif = "0.17"
which = "7"

db = { path = "../db" }
server = { path = "../server" }
