[package]
name = "events"
version.workspace = true
edition.workspace = true

[features]
default = []
typescript = ["ts-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true, optional = true }
utoipa = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
