[package]
name = "github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
opencode_core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }

# GitHub API client
octocrab = "0.41"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
