[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
opencode_core.workspace = true
opencode.workspace = true
db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
