[package]
name = "server"
version.workspace = true
edition.workspace = true

[features]
default = []
typescript = ["ts-rs", "opencode_core/typescript", "events/typescript", "vcs/typescript", "websocket/typescript"]

[dependencies]
opencode_core = { workspace = true }
opencode = { workspace = true }
orchestrator = { workspace = true }
db = { workspace = true }
vcs = { workspace = true }
events = { workspace = true }
websocket = { workspace = true }
github = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true, optional = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[[bin]]
name = "generate-types"
path = "src/bin/generate_types.rs"
required-features = ["typescript"]

[dev-dependencies]
tokio = { workspace = true }
axum-test = "18"
wiremock = "0.6"
tempfile = "3.14"
uuid = { workspace = true }
serde_json = { workspace = true }
