[package]
name = "server"
version.workspace = true
edition.workspace = true

[features]
default = []
typescript = ["ts-rs", "opencode_core/typescript", "events/typescript", "vcs/typescript", "orchestrator/typescript"]

[dependencies]
opencode_core = { workspace = true }
opencode_client = { workspace = true }
orchestrator = { workspace = true, features = ["openapi"] }
db = { workspace = true }
vcs = { workspace = true }
events = { workspace = true }
wiki = { workspace = true }

github = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true, optional = true }
chrono = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dirs = "5"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
which = "7"
reqwest = { workspace = true }

[[bin]]
name = "generate-types"
path = "src/bin/generate_types.rs"
required-features = ["typescript"]

[dev-dependencies]
tokio = { workspace = true }
axum-test = "18"
wiremock = "0.6"
tempfile = "3.14"
uuid = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
orchestrator = { workspace = true }
