[package]
name = "vcs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
typescript = ["ts-rs"]

[dependencies]
opencode_core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ts-rs = { workspace = true, optional = true }
utoipa = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
